--- a/splash.html
+++ b/splash.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Favicons -->
-  <link rel="apple-touch-icon" href="./gus_logo.svg" sizes="180x180">
-  <link rel="icon" href="./gus_logo.svg" sizes="16x16" type="image/png">
+  <link rel="apple-touch-icon" href="./src/assets/img/favicons/favicon180_180px.svg" sizes="180x180">
+  <link rel="icon" href="./src/assets/img/favicons/favicon-16-16px.svg" sizes="16x16" type="image/png">
+  <link rel="icon" href="./src/assets/img/favicons/favicon32-32px.svg" sizes="32x32" type="image/png">
   <title>Loading...</title>
   <style>
     @import url('./src/styles/fonts.css');
