--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="row h-100">
       <aside class="col-12 col-md-3 col-lg-2 bg-light p-3 d-flex flex-column h-100">
         <a href="javascript:void(0)" class="d-flex align-items-center mb-3 text-decoration-none text-dark nav-link">
-          <img src="./src/assets/img/brand/CloudSquish_50-200px.svg" class="navbar-brand-img" alt="main_logo">
+          <img src="./app_icon.svg" class="navbar-brand-img d-block justify-content-center mx-auto" alt="main_logo" width="100">
         </a>      
         <hr>
         <nav class="flex-grow-1">
@@ -72,11 +72,11 @@
         </div>
         <div class="my-5"></div>
         <footer class="bg-light py-3 px-4 mt-auto d-flex justify-content-between align-items-center">
-          <span class="text-muted">Powered by sailsmakr</span>
+          <span class="text-muted">Powered by bytesprint</span>
           <nav class="d-flex gap-3">
-            <a href="www.sailsmakr.com/privacy" class="text-muted text-decoration-none">Privacy</a>
-            <a href="www.sailsmakr.com/contact-us" class="text-muted text-decoration-none">Contact Us</a>
-            <a href="www.sailsmakr.com/about" class="text-muted text-decoration-none">About</a>
+            <a href="www.bytesprint.com/privacy" class="text-muted text-decoration-none">Privacy</a>
+            <a href="www.bytesprint.com/contact-us" class="text-muted text-decoration-none">Contact Us</a>
+            <a href="www.bytesprint.com/about" class="text-muted text-decoration-none">About</a>
           </nav>
         </footer>
       </main>
