--- a/splash.html
+++ b/splash.html
@@ -86,7 +86,8 @@
   </div>
   <div class="powered-by">
     <div><em>Powered by</em></div>
-    <div><strong>bytesprint</strong></div>
+    <div><strong>Bytesprint Robotics</strong></div>
   </div>
 </body>
 </html>
+
